| Summary: | ASTERISK-24900: Manager event ParkedCallSwap is not documented | ||
| Reporter: | Rusty Newton (rnewton) | Labels: | |
| Date Opened: | 2015-03-20 20:26:59 | Date Closed: | 2015-06-16 11:42:16 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Core/ManagerInterface |
| Versions: | SVN 12.8.1 13.2.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Asterisk 12, 13 | Attachments: | |
| Description: | ParkedCallSwap needs documentation.
It was added here, https://reviewboard.asterisk.org/r/2712/ but didn't get documented. | ||
| Comments: | |||